// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dodge target should dodge attack if has initiator more dex 1`] = `
[
  {
    "action": "🐍 Увертка",
    "actionType": "skill",
    "exp": 0,
    "initiator": "alias",
    "msg": [Function],
    "target": "alias",
  },
  {
    "action": "attack",
    "actionType": "phys",
    "cause": {
      "action": "🐍 Увертка",
      "actionType": "skill",
      "exp": 50,
      "initiator": "alias",
      "msg": [Function],
      "target": "asperiores",
    },
    "initiator": "asperiores",
    "message": undefined,
    "target": "alias",
    "weapon": {
      "code": "a100",
    },
  },
]
`;

exports[`dodge target should not dodge attack if target has more dex 1`] = `
[
  {
    "action": "🐍 Увертка",
    "actionType": "skill",
    "exp": 0,
    "initiator": "explicabo",
    "msg": [Function],
    "target": "explicabo",
  },
  {
    "action": "attack",
    "actionType": "phys",
    "dmg": 11,
    "dmgType": "physical",
    "exp": 88,
    "hp": -3,
    "initiator": "repellat",
    "target": "explicabo",
    "weapon": {
      "code": "a100",
    },
  },
]
`;
